<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_uri"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btn_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_uri"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_location"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_location"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edt_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edt_share"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_share"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"/>
</LinearLayout>